--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "express": "^4.17.3",
-    "module": "^1.2.5"
+    "module": "^1.2.5",
+    "uuid": "^8.3.2"
   }
 }
